--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,44 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600');
+
 body {
-    font-family: monospace;
+    font-family: Nunito, monospace;
     margin: 0;
     background-color: #222831;
 }
 
 .hero {
     display: flex;
-    justify-content: center;
+    padding-top: 50px;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    flex-direction: column;
 
+}
+
+.proimage img {
+    border: 1px solid #00adb5;
+    display: block;
+    border-radius: 50%;
 }
 
 .center h1,
 h4 {
     padding: 20px 30px;
-    font-size: 3rem;
-    background: #393e46;
     color: #00adb5;
     text-align: center;
 }
 
+.center h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0;
+    font-weight: 600;
+}
+
 .center h4 {
+    margin-top: 0;
     font-size: 1.5rem;
     background: inherit;
+    font-weight: 100;
 
 }
 
@@ -35,24 +50,28 @@ h4 {
 
 .social div {
     color: #eeeeee;
-    font-weight: lighter;
+    font-weight: 100;
 }
-.social div a{
-    color: #eeeeee; 
+
+.social div a {
+    color: #eeeeee;
     text-decoration: none;
     text-transform: none;
+    font-weight: 100;
 }
+
 @media screen and (max-width:800px) {
     .center h1 {
         font-size: 2rem;
     }
 
     .center h4 {
-        font-size: .9rem;
-        font-weight: lighter;
+        font-size: 1.2rem;
+        font-weight: 100;
     }
 
     body {
         padding: 0 10px;
+        font-size: 0.9rem;
     }
 }
