--- a/css/style.scss
+++ b/css/style.scss
@@ -99,9 +99,9 @@ a {
         width: 50%;
     }
 
-    * {
-        // border: 1px solid sandybrown; //testing purpose
-    }
+    // * {
+    // border: 1px solid sandybrown; //testing purpose
+    // }
 
     .card-title {
         text-transform: uppercase;
